2008-04-17  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #451976

	* prefer-plain.c: (org_gnome_prefer_plain_multipart_alternative): Try
	to find text/html part in multipart/alternative when in normal mode.

2007-10-26  Kjartan Maraas <kmaraas@gnome.org>

	* prefer-plain.c: (e_plugin_lib_enable):
	Fix NULL vs. 0.

2007-10-30  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #487922
	(Sometimes evolution does not recognize attachments)

	* prefer-plain.c: (export_as_attachments): New helper function to
	export message parts as attachments. This will traverse whole
	hierarchy of message's parts in multipart message.
	* prefer-plain.c: (org_gnome_prefer_plain_multipart_alternative):
	Use this function to export other parts as attachments.

2007-09-05  Sankar P  <psankar@novell.com>

	* prefer-plain.c: (e_plugin_lib_enable):
	Fixes an invalid return type issue.

2007-08-27  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #431459

	* prefer-plain.c: (e_plugin_lib_enable): Avoid reentrancy.

2007-08-16  Milan Crha  <mcrha@redhat.com>

	** Part of fix for bug #350539

	* prefer-plain.c: (org_gnome_prefer_plain_multipart_alternative):
	Ensures non-NULL part.

2007-08-05  Johnny Jacob  <jjohnny@novell.com> 

	* Committed on behalf of Anand V M  <avmuttagi@gmail.com>
	
	** Fix for bug #428125
	
	* prefer-plain.c: Added mnemonic for "Plain Text Mode" in
	preferences

2007-04-02  Sankar P  <psankar@novell.com>

	* Committed on behalf of Gilles Dartiguelongue <dartigug@esiee.fr>

	* org-gnome-prefer-plain.eplug.xml:
	Cleanup. 
	Fixes part of #301149

2006-08-17  Kjartan Maraas  <kmaraas@gnome.org>

	* prefer-plain.c: (e_plugin_lib_enable): Don't leak the key.

2006-01-19  Andre Klapper <a9016009@gmx.de>

	* org-gnome-prefer-plain.eplug.xml
	changed "mails" to "emails". Fixes bug 325569.

2005-05-17  Not Zed  <NotZed@Ximian.com>

	* org-gnome-prefer-plain.eplug.xml: make it clear this is a demonstration only.

2005-05-12  Not Zed  <NotZed@Ximian.com>
